// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nextLink snapshot RichText with paragraphs 1`] = `
Array [
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </p>,
  <p>
    Aliquam dui turpis, ultricies quis semper vel, facilisis in leo.
  </p>,
  <p>
    In aliquet orci et egestas sagittis.
  </p>,
  <p>
    Phasellus pretium, elit ac pellentesque porta, lacus sapien laoreet neque, nec bibendum odio leo sollicitudin tellus.
  </p>,
]
`;

exports[`nextLink snapshot Richtext with unordered list 1`] = `
Array [
  <pre>
    {"type":"list-item","text":"first"}
  </pre>,
  <pre>
    {"type":"list-item","text":"second"}
  </pre>,
  <pre>
    {"type":"list-item","text":"third"}
  </pre>,
]
`;

exports[`nextLink snapshot h1 headline 1`] = `
<h1>
  this is a h1 headline
</h1>
`;

exports[`nextLink snapshot h2 headline 1`] = `
<h2>
  this is a h2 headline
</h2>
`;

exports[`nextLink snapshot h3 headline 1`] = `
<h3>
  this is a h3 headline
</h3>
`;

exports[`nextLink snapshot h4 headline 1`] = `
<h4>
  this is a h4 headline
</h4>
`;

exports[`nextLink snapshot h5 headline 1`] = `
<h5>
  this is a h5 headline
</h5>
`;

exports[`nextLink snapshot h6 headline 1`] = `
<h6>
  this is a h6 headline
</h6>
`;

exports[`render Dummy molecule snapshot renders Dummy molecule 1`] = `
Array [
  <h1>
    this is a h1 headline
  </h1>,
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </p>,
  <p>
    Aliquam dui turpis, ultricies quis semper vel, facilisis in leo.
  </p>,
  <p>
    In aliquet orci et egestas sagittis.
  </p>,
  <p>
    Phasellus pretium, elit ac pellentesque porta, lacus sapien laoreet neque, nec bibendum odio leo sollicitudin tellus.
  </p>,
]
`;
